--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "dependencies": {
     "classnames": "^2.3.2",
     "next": "13.0.2",
+    "ramda": "^0.28.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
     "tailwindcss": "^3.2.2"
   }
 }
