--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "mongoose": "^6.7.1",
     "next": "13.0.2",
     "ramda": "^0.28.0",
     "react": "18.2.0",
