--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGODB_URI="mongodb://localhost:27017/"
+# MONGODB_URI="mongodb://localhost:27017/butter-post"
+MONGODB_URI=mongodb+srv://Yopi:OzTDcDSIN67IYgvZ@cluster0.tlpgbq1.mongodb.net/butter-post
