--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.1",
     "next": "13.0.2",
+    "next-auth": "^4.16.4",
     "ramda": "^0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
