--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^6.7.1",
     "next": "13.0.2",
     "next-auth": "^4.16.4",
+    "nodemailer": "^6.8.0",
     "ramda": "^0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
